# SDL2-xarchon

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
data/: Makefile.am  (+6 more)
oldsrc/data/: Makefile.am  Makefile.in  icon.xpm  logo.xpm  statistics  xarchon-palette  xarchon.default.in
oldsrc/data/archon/actors/dark/banshee/: move.down.0.xpm  move.left.0.xpm  move.up.0.xpm  move.upright.0.xpm
oldsrc/data/archon/actors/dark/basilisk/: fire.down.0.xpm  fire.up.0.xpm  fire.upleft.0.xpm  fire.upright.0.xpm  move.down.0.xpm  move.downright.0.xpm  move.up.0.xpm  move.upleft.0.xpm
oldsrc/data/archon/actors/dark/dragon/: fire.down.0.xpm  fire.downright.0.xpm  fire.up.0.xpm  fire.upleft.0.xpm  move.down.0.xpm  move.downright.0.xpm  move.left.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/dark/goblin/: fire.down.0.xpm  fire.left.0.xpm  fire.right.0.xpm  fire.up.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.right.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/dark/manticore/: fire.down.0.xpm  fire.downright.0.xpm  fire.up.0.xpm  fire.upleft.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.right.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/dark/shapeshifter/: move.down.0.xpm  move.up.0.xpm  move.upleft.0.xpm  move.upright.0.xpm
oldsrc/data/archon/actors/dark/sorceress/: fire.down.0.xpm  fire.left.0.xpm  fire.up.0.xpm  fire.upright.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.downright.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/dark/troll/: fire.down.0.xpm  fire.left.0.xpm  fire.up.0.xpm  fire.upright.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.downright.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/elemental/air-elemental/: elem.air.0.xpm  elem.air.2.xpm
oldsrc/data/archon/actors/elemental/earth-elemental/: elem.earth.0.xpm  elem.earth.10.xpm  elem.earth.12.xpm  elem.earth.13.xpm  elem.earth.2.xpm  elem.earth.4.xpm  elem.earth.6.xpm  elem.earth.8.xpm
oldsrc/data/archon/actors/elemental/fire-elemental/: elem.fire.0.xpm
oldsrc/data/archon/actors/elemental/water-elemental/: elem.water.1.xpm  elem.water.4.xpm  elem.water.8.xpm  elem.water.9.xpm
oldsrc/data/archon/actors/light/archer/: fire.down.0.xpm  fire.downleft.0.xpm  fire.downright.0.xpm  fire.up.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.downright.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/light/djinni/: fire.down.0.xpm  fire.downleft.0.xpm  fire.right.0.xpm  fire.up.0.xpm  move.down.0.xpm  move.up.0.xpm  move.upleft.0.xpm  move.upright.0.xpm
oldsrc/data/archon/actors/light/golem/: fire.down.0.xpm  fire.downleft.0.xpm  fire.right.0.xpm  fire.up.0.xpm  move.down.0.xpm  move.downright.0.xpm  move.up.0.xpm  move.upleft.0.xpm
oldsrc/data/archon/actors/light/knight/: fire.down.0.xpm  fire.right.0.xpm  fire.up.0.xpm  fire.upleft.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.right.0.xpm  move.up.0.xpm
oldsrc/data/archon/actors/light/phoenix/: move.down.0.xpm  move.downleft.0.xpm  move.up.0.xpm  move.upright.0.xpm
oldsrc/data/archon/actors/light/unicorn/: fire.down.0.xpm  fire.downright.0.xpm  fire.left.0.xpm  fire.up.0.xpm  move.down.0.xpm  move.downleft.0.xpm  move.right.0.xpm  move.up.0.xpm
oldsrc/data/archon/cursor/: board.0.xpm  board.1.xpm  board.2.xpm
oldsrc/data/archon/floor/: board.0.xpm  board.1.xpm  board.2.xpm  board.3.xpm  board.4.xpm  board.5.xpm  board.6.xpm  board.7.xpm  elem.air.0.xpm  elem.earth.0.xpm  elem.fire.0.xpm  elem.water.0.xpm  empty.0.xpm  empty.xpm  field.0.xpm  field.1.xpm  field.2.xpm  field.3.xpm  field.4.xpm  field.5.xpm  field.6.xpm  power.0.xpm  power.1.xpm  power.2.xpm  power.3.xpm  power.4.xpm  power.5.xpm  power.6.xpm  power.7.xpm  power.8.xpm  power.9.xpm
oldsrc/src/gtk/: Makefile.am  Makefile.in  gtk-callbacks.h  gtk-computer.c  gtk-help.c  gtk-human.c  gtk-iface.c  gtk-iface.h  gtk-interface.c  gtk-interface.h  gtk-main-window.c  gtk-main-window.h  gtk-network.c  gtk-support.c  gtk-theme.c  gtk-toolkit-priv.h  gtk-toolkit.c  gtk-toolkit.h  xarchon.glade
src/: Genetic.hpp  Makefile.am  Makefile.in  Problem.hpp  Xarchon_Game.cpp  Xarchon_Game.hpp  Xarchon_Genetic.cpp  Xarchon_Genetic.hpp  Xarchon_Interface.cpp  Xarchon_Interface.hpp  Xarchon_Problem.cpp  Xarchon_Problem.hpp  actors.c  actors.h  audio.c  audio.h  board.c  board.h  box  canvas.c  canvas.h  computer.c  computer.h  field.c  field.h  genetics_main.c  human.c  human.h  iface.c  iface.h  list.c  list.h  main-random.h  main.c  main.cpp  main.h  mouse-patch  network.c  network.h  random-generator.c  (+10 more)
src/Engine/: CTexture.cpp  CTexture.h  GraphicsCore.cpp  GraphicsCore.h  InputCore.cpp  InputCore.h  Resource.cpp  Resource.h  SoundCore.cpp  SoundCore.h
src/Game/: Game.cpp  Game.h
src/gtk/: Makefile.am  Makefile.in  gtk-callbacks.h  gtk-computer.c  gtk-help.c  gtk-human.c  gtk-iface.c  gtk-iface.h  gtk-interface.c  gtk-interface.h  gtk-main-window.c  gtk-main-window.h  gtk-network.c  gtk-support.c  gtk-theme.c  gtk-toolkit-priv.h  gtk-toolkit.c  gtk-toolkit.h  xarchon.glade
src/old/: README
src/old/canvas/: README  and-or-canvas.c  png-dither-canvas.c  png-dither.h  png-no-dither-canvas.c  png-sprite.c  shm-canvas.c  shm-canvas.h
src/old/nongtk/: main.c
src/old/scheme/: iface.c  iface.h  main.c  scheme.c  scheme.h
src/old/scheme/lib/scheme/: init.scm  joeblow.scm  joeblow.scm.backup
src/old/themes/: README  actors.c
src/qt/: Makefile.am  Makefile.in  qkeypushbutton.cpp  qkeypushbutton.h  qmymenubar.cpp  qmymenubar.h  qmyprogressbar.cpp  qmyprogressbar.h  qt-toolkit.cpp  qt-toolkit.h  qtcomputeriface.cpp  qtcomputeriface.h  qtguiwidget.cpp  qtguiwidget.h  qthumaniface.cpp  qthumaniface.h  qtiface.cpp  qtiface.h  qtnetworkiface.cpp  qtnetworkiface.h  qtplayersdialog.cpp  qtplayersdialog.h  qtplayerwidget.cpp  qtplayerwidget.h
src/qt/.deps/: qkeypushbutton.Po  qmymenubar.Po  qmyprogressbar.Po  qt-toolkit.Po  qtcomputeriface.Po  qtguiwidget.Po  qthumaniface.Po  qtiface.Po  qtnetworkiface.Po  qtplayersdialog.Po  qtplayerwidget.Po
(+516 files in other folders)
